# phantom_relay

./: .gitignore  ARCHITECTURE.md  COMPONENTS.md  Cargo.toml  DATAFLOW.md  DATA_FLOWS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCS_INDEX.md  LICENSE  README.md  install.sh
cli/src/: main.rs
cli/src/cli/: args.rs  client.rs  mod.rs  parser.rs
cli/src/ipc/: protocol.rs
cli/src/runtime/: commands.rs  mod.rs  service.rs  status.rs
phantomrelayd/: Cargo.toml  phantomrelay.toml
phantomrelayd/src/: lib.rs  main.rs  phantomrelay.toml
phantomrelayd/src/collector/: collector.rs  health.rs  manager.rs  mod.rs  service.rs
phantomrelayd/src/config/: collector.rs  defaultstate.rs  dns.rs  logger.rs  mod.rs  proxy.rs  rotation.rs  tproxy.rs
phantomrelayd/src/debug/: config.rs  conn.rs  dns.rs  mod.rs  proxy.rs  route.rs
phantomrelayd/src/dns/: cache.rs  cleanup.rs  doh.rs  listener.rs  mod.rs  parse.rs
phantomrelayd/src/dns/prewarmer/: mod.rs  packet.rs  preload.rs  refresh.rs
phantomrelayd/src/ipc/: protocol.rs  server.rs
phantomrelayd/src/metrics/: listener.rs  metrics.rs  mod.rs
phantomrelayd/src/monitor/: bus.rs  error_ext.rs  events.rs  level.rs  logger.rs  mod.rs
phantomrelayd/src/proxy/: handler.rs  server.rs
phantomrelayd/src/rotation/: collector.rs  health.rs  mod.rs  service.rs
phantomrelayd/src/routing/: connect.rs  connection.rs  manager.rs  mod.rs  proxy.rs
phantomrelayd/src/routing/types/: socks5.rs
phantomrelayd/src/runtime/: commands.rs  context.rs  controller.rs  factories.rs  mod.rs  service.rs  signal.rs  startup.rs
phantomrelayd/src/subsystems/: mod.rs
phantomrelayd/src/subsystems/network/: capablities.rs  manager.rs  mod.rs  rules.rs
phantomrelayd/src/subsystems/rotation/: manager.rs  mod.rs  route.rs  service.rs
phantomrelayd/src/system/network/: capablities.rs  manager.rs  rules.rs
phantomrelayd/src/tproxy/: listener.rs  mod.rs  original_dst.rs  relay.rs
phantomrelayd/src/utils/: converter.rs
prctl/: Cargo.toml
prctl/src/: main.rs
prctl/src/cli/: args.rs  parser.rs
prctl/src/ipc/: protocol.rs
prctl/src/runtime/: commands.rs  metrics.rs  mod.rs  status.rs
src/: lib.rs  main.rs
src/config/: dns.rs  mod.rs  proxy.rs
src/dns/: cache.rs  cleanup.rs  doh.rs  listener.rs  mod.rs  parse.rs
src/dns/prewarmer/: mod.rs  preload.rs  refresh.rs
src/metrics/: listener.rs  metrics.rs
src/monitor/: bus.rs  events.rs  logger.rs  mod.rs
src/packet/: mod.rs  parser.rs  protocol.rs  structures.rs
src/proxy/: handler.rs  server.rs
src/redirect/: listener.rs  mod.rs  relay.rs
src/relay/: connection.rs  manager.rs  mod.rs  proxy.rs  socks5.rs
src/routing/: connect.rs  connection.rs
src/runtime/: commands.rs  controller.rs  factories.rs  mod.rs  service.rs  shutdown.rs  startup.rs
src/system/: mod.rs  nftables.rs
src/tproxy/: listener.rs  relay.rs
src/tun/: device.rs  mod.rs  reader.rs
