[package]
name = "phantom_relay"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
anyhow = "1"
tokio-socks = "0.5"
async-trait = "0.1"
libc = "0.2"
dashmap = "7.0.0-rc2"
reqwest = { version= "0.12", features = ["socks"]}
chrono = "0.4"
rand = "0.8"
fast-socks5 = "1.0.0"