[package]
name = "phantomrelayd"
version = "0.1.11"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
anyhow = "1"
tokio-socks = "0.5"
async-trait = "0.1"
libc = "0.2"
dashmap = "7.0.0-rc2"
reqwest = { version= "0.12", features = ["socks", "json"]}
chrono = "0.4"
rand = "0.8"
socket2 = "0.5"
fast-socks5 = "1.0.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"